fix: remove gap

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -567,7 +567,6 @@ footer .footer-below {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
     padding: 20px;
 }
 
